# Advent-of-Code

./: AdventOfCode.code-workspace  README.md
2024/everybody.codes/: Cargo.toml  README.md  justfile
2024/everybody.codes/daily-quest-template/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/everybody.codes/daily-quest-template/src/: part1.rs  part2.rs  part3.rs
2024/everybody.codes/quest-01/: Cargo.toml
2024/everybody.codes/quest-01/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/everybody.codes/quest-01/src/: custom_error.rs  lib.rs  part1.rs  part2.rs  part3.rs
2024/everybody.codes/quest-02/: Cargo.toml  input2.txt
2024/everybody.codes/quest-02/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/everybody.codes/quest-02/src/: lib.rs  part1.rs  part2.rs
2024/rust/: .gitignore  Cargo.toml  NOTES.md  README.md  benchmarks.txt  day-01.bench.txt  day-02.bench.txt  day-03.bench.txt  day-04.bench.txt  day-05.bench.txt  day-06.bench.txt  day-07.bench.txt  day-08.bench.txt  day-09.bench.txt  day-10.bench.txt  day-11.bench.txt  day-12.bench.txt  day-13.bench.txt  day-17.bench.txt  day-18.bench.txt  day-19.bench.txt  day-20.bench.txt  day-21.bench.txt  day-22.bench.txt  day-23.bench.txt  day-24.bench.txt  day-25.bench.txt  justfile
2024/rust/.cargo/: .gitignore  config.toml.example
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/daily-template/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-00/: Cargo.toml
2024/rust/day-00/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-01/src/: lib.rs  part1.rs  part1_nom.rs  part2.rs
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-02/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-03/: Cargo.toml
2024/rust/day-03/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-03/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-04/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-05/: Cargo.toml
2024/rust/day-05/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-05/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-06/: Cargo.toml
2024/rust/day-06/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-06/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-07/: Cargo.toml
2024/rust/day-07/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-07/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-08/: Cargo.toml
2024/rust/day-08/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-08/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-09/: Cargo.toml
2024/rust/day-09/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-09/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-10/: Cargo.toml
2024/rust/day-10/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-10/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-11/: Cargo.toml
2024/rust/day-11/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-11/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-12/: Cargo.toml
2024/rust/day-12/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-12/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-13/: Cargo.toml
2024/rust/day-13/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-13/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-14/: Cargo.toml
2024/rust/day-14/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-14/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-15/: Cargo.toml
2024/rust/day-15/benches/: benchmarks-criterion.rs
2024/rust/day-15/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-16/: Cargo.toml
2024/rust/day-16/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-16/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-17/: Cargo.toml
2024/rust/day-17/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-17/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-18/: Cargo.toml
2024/rust/day-18/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-18/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-19/: Cargo.toml
2024/rust/day-19/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-19/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-20/: Cargo.toml
2024/rust/day-20/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-20/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-21/: Cargo.toml
2024/rust/day-21/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-21/src/: lib.rs  part1.rs
2024/rust/day-22/: Cargo.toml
2024/rust/day-22/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-22/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-23/: Cargo.toml
2024/rust/day-23/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-23/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-24/: Cargo.toml  circuit.dot
2024/rust/day-24/benches/: benchmarks-criterion.rs  benchmarks.rs
2024/rust/day-24/src/: circuit.dot  lib.rs  part1.rs  part2.rs
2024/rust/day-25/: Cargo.toml
2024/rust/day-25/src/: lib.rs  (+2 more)
2024/rust/lights/: Cargo.toml  README.md
2024/rust/ornaments/: Cargo.toml  README.md
2024/rust/scripts/: Cargo.toml  get-aoc-input.rs
(+4 files in other folders)
