[workspace]
resolver = "2"

members = ["quest-*"]
default-members = ["quest-*"]

[workspace.dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
dhat = "0.3.2"
divan = "0.1.11"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.13.0"
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
petgraph = "0.6.4"
rayon = "1.8.0"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-tracy = "0.11.3"
tracy-client = "0.17.4"
tracy-client-sys = "0.24.1"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
