[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

# Enable a small amount of optimization in the dev profile. (for bevy)
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies. (for bevy)
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time. (for bevy
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web. (for bevy)
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[workspace.dependencies]
bevy = { version = "0.15.0" }
criterion = { version = "0.5.1", features = ["html_reports"] }
dhat = "0.3.2"
divan = "0.1.11"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.13.0"
# re-enable for bevy performance, see https://bevyengine.org/learn/quick-start/getting-started/setup/
# log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
petgraph = "0.6.4"
rayon = "1.8.0"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-tracy = "0.11.3"
tracy-client = "0.17.4"
tracy-client-sys = "0.24.1"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
