[package]
name = "day-10"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
thiserror.workspace = true
aho-corasick = "1.1.2"
dhat.workspace = true
glam.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true
rstest.workspace = true

[[bench]]
name = "day-10-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-10-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []